--- a/index.html
+++ b/index.html
@@ -77,27 +77,30 @@
       <h2>Projects</h2>
 
       <div class="project">
-        <a href="https://github.com/SyngyeonTak/GNN-and-GraphRAG-based-Movie-Recommendation-Chatbot" target="_blank">[링크]</a>
+        <strong>GraphRAG Movie Chatbot</strong>
+        <a href="https://github.com/SyngyeonTak/GNN-and-GraphRAG-based-Movie-Recommendation-Chatbot" target="_blank">[link]</a>
         <p>
           Neo4j + PyTorch Geometric 기반 이종 지식 그래프와 GNN 추천 모델을 결합하여 영화 추천 챗봇 구현.  
           LLM 기반 질의 라우팅 및 RAG 아키텍처로 사실 기반 + 개인화 추천 지원.
         </p>
       </div>
-
+      
       <div class="project">
-        <a href="https://github.com/seoulAlpha/seoulAlpha" target="_blank">[링크]</a>
-          LLM 기반 여행지 추천 챗봇 ("서울 + Alpha")
-        </a>
-        <p>외국인 관광객 데이터 분석 및 군집화 기반으로 대화형 여행 추천 서비스 개발.  
-           다국어 지원 RAG 구조 설계 및 LLM Agent 구현.</p>
+        <strong>LLM 기반 여행지 추천 챗봇 ("서울 + Alpha")</strong>
+        <a href="https://github.com/seoulAlpha/seoulAlpha" target="_blank">[link]</a>
+        <p>
+          외국인 관광객 데이터 분석 및 군집화 기반으로 대화형 여행 추천 서비스 개발.  
+          다국어 지원 RAG 구조 설계 및 LLM Agent 구현.
+        </p>
       </div>
-
+      
       <div class="project">
-        <a href="https://github.com/DDohyeon2941/sungsoo" target="_blank">[링크]</a>
-          성동구 상권 분석 프로젝트
-        </a>
-        <p>성동구 빅데이터 분석·활용 펠로우십 참여.  
-           상권별 매출/유동인구 데이터 분석 및 지속 가능한 상권 정의와 정책 제언.</p>
+        <strong>성동구 상권 분석 프로젝트</strong>
+        <a href="https://github.com/DDohyeon2941/sungsoo" target="_blank">[link]</a>
+        <p>
+          성동구 빅데이터 분석·활용 펠로우십 참여.  
+          상권별 매출/유동인구 데이터 분석 및 지속 가능한 상권 정의와 정책 제언.
+        </p>
       </div>
 
       <div class="project">
