--- a/index.html
+++ b/index.html
@@ -69,10 +69,20 @@
       <p>
         GNN(Graph Neural Network) 기반 세션 추천 시스템 연구 경험과, 
         Graph DB·LLM을 활용한 추천 챗봇 개발 경험을 보유하고 있습니다.  
-        금융 IT 업계에서의 3년간 백엔드 및 데이터 엔지니어링 실무 경험 또한 있습니다.
+        또한 핀테크 업계에서의 3년간 Java 기반 백엔드 및 데이터 엔지니어링 실무 경험이 있습니다.
+        많은 관심 부탁드립니다.
       </p>
     </section>
 
+      <section>
+        <h2>Education</h2>
+          <ul>
+            <li><strong>서울과학기술대학교</strong>, 데이터사이언스학과 석사 (2024.03 ~ 2026.02)</li>
+            <li><strong>한국방송통신대학교</strong>, 데이터과학 및 통계 학사 (2022.03 ~ 2024.02)</li>
+            <li><strong>광운대학교</strong>, 산업심리학과 학사 (2017.03 ~ 2020.02)</li>
+          </ul>
+    </section>
+    
     <section>
       <h2>Projects</h2>
 
