--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         GNN(Graph Neural Network) 기반 세션 추천 시스템 연구 경험과, 
         Graph DB·LLM을 활용한 추천 챗봇 개발 경험을 보유하고 있습니다.  
         또한 핀테크 업계에서의 3년간 Java 기반 백엔드 및 데이터 엔지니어링 실무 경험이 있습니다.
-        많은 관심 부탁드립니다.
+        <br>많은 관심 부탁드립니다.
       </p>
     </section>
 
@@ -115,7 +115,7 @@
 
       <div class="project">
         <strong> Session-Based Recommendation with GNN</strong>
-        <p>(서울과학기술대학교 석사 연구 / 논문 투고 후 코드 공개 예정)  
+        <p>(서울과학기술대학교 석사 연구 / 논문 투고 후 코드 공개 예정)<br>  
            Homogeneous/Heterogeneous/Hypergraph 기반 세션 추천 연구, 
            데이터 필터링 및 증강 기법으로 Tail 아이템 성능 개선.</p>
       </div>
