--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <strong>GraphRAG Movie Chatbot</strong>
         <a href="https://github.com/SyngyeonTak/GNN-and-GraphRAG-based-Movie-Recommendation-Chatbot" target="_blank">[link]</a>
         <p>
-          Neo4j + PyTorch Geometric 기반 이종 지식 그래프와 GNN 추천 모델을 결합하여 영화 추천 챗봇 구현.  
+          Neo4j + PyTorch Geometric 기반 이종 지식 그래프와 GNN 추천 모델을 결합하여 영화 추천 챗봇 구현.  <br>
           LLM 기반 질의 라우팅 및 RAG 아키텍처로 사실 기반 + 개인화 추천 지원.
         </p>
       </div>
@@ -99,8 +99,9 @@
         <strong>LLM 기반 여행지 추천 챗봇 ("서울 + Alpha")</strong>
         <a href="https://github.com/seoulAlpha/seoulAlpha" target="_blank">[link]</a>
         <p>
-          외국인 관광객 데이터 분석 및 군집화 기반으로 대화형 여행 추천 서비스 개발.  
-          다국어 지원 RAG 구조 설계 및 LLM Agent 구현.
+          외국인 관광객 데이터 분석 및 군집화 기반으로 대화형 여행 추천 서비스 개발. <br>
+          다국어 지원 RAG 구조 설계 및 LLM Agent 구현. <br>
+          Hugging Face Spaces 배포 및 유지 보수
         </p>
       </div>
       
@@ -108,38 +109,16 @@
         <strong>성동구 상권 분석 프로젝트</strong>
         <a href="https://github.com/DDohyeon2941/sungsoo" target="_blank">[link]</a>
         <p>
-          성동구 빅데이터 분석·활용 펠로우십 참여.  
-          상권별 매출/유동인구 데이터 분석 및 지속 가능한 상권 정의와 정책 제언.
+          성동구 빅데이터 분석·활용 펠로우십 참여. <br>
+          상권별 매출/유동인구 데이터 분석 및 지속 가능한 상권 정의와 정책 제언. <br>
+          2024 성동구 빅데이터 펠로우십에서 우수상.
         </p>
       </div>
 
       <div class="project">
         <strong> Session-Based Recommendation with GNN</strong>
         <p>(서울과학기술대학교 석사 연구 / 논문 투고 후 코드 공개 예정)<br>  
-           Homogeneous/Heterogeneous/Hypergraph 기반 세션 추천 연구, 
-           데이터 필터링 및 증강 기법으로 Tail 아이템 성능 개선.</p>
-      </div>
-    </section>
-
-    <section>
-      <h2>Experience</h2>
-      <p><strong>SBI Cosmoney</strong> | 연구원 (2021.03 ~ 2024.02)</p>
-      <ul>
-        <li>사내 백오피스 시스템 개발 및 운영 (Spring Boot, REST API)</li>
-        <li>MySQL 기반 데이터 모델링 및 대용량 통계 처리 자동화</li>
-        <li>실시간 송금 시스템 장애 대응 및 기술 커뮤니케이션 주도</li>
-      </ul>
-    </section>
-
-    <section>
-      <h2>Contact</h2>
-      <p>📧 Email: <a href="mailto:a01055356349@gmail.com">a01055356349@gmail.com</a></p>
-      <p>🔗 GitHub: <a href="https://github.com/syngyeontak" target="_blank">syngyeontak</a></p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2025 승연 탁 | Portfolio</p>
+           Homogeneous/Het탁승연 | Portfolio</p>
   </footer>
 </body>
 </html>
