--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@
     <section>
       <h2>About Me</h2>
       <p>
-        GNN(Graph Neural Network) 기반 세션 추천 시스템 연구 경험과, 
-        Graph DB·LLM을 활용한 추천 챗봇 개발 경험을 보유하고 있습니다.  
-        또한 핀테크 업계에서의 3년간 Java 기반 백엔드 및 데이터 엔지니어링 실무 경험이 있습니다.
-        <br>많은 관심 부탁드립니다.
+        새로운 아이디어를 검증하고 실제 서비스로 연결하는 과정에서 큰 보람을 느끼는 개발자입니다.<br>
+        연구에서 얻은 통찰을 바탕으로 <strong>“실제 문제를 효율적으로 해결하는 AI”</strong>를 만드는 것을 목표로 하고 있습니다.
       </p>
+    
+      <div style="margin-top:10px;">
+        <strong>Research & Tech Keywords:</strong><br>
+        🧠 GNN (Graph Neural Network) · 🤖 LLM · 🕸️ Graph DB · 🎯 추천시스템
+      </div>
     </section>
 
       <section>
