--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     
       <div style="margin-top:10px;">
         <strong>Research & Tech Keywords:</strong><br>
-        🧠 GNN (Graph Neural Network) · 🤖 LLM · 🕸️ Graph DB · 🎯 추천시스템
+        GNN (Graph Neural Network) · LLM · Graph DB · 추천시스템
       </div>
     </section>
 
