--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
           <ul class="circle-list">
             <li>RAG(Retrieval-Augmented Generation) 구조로 <strong>LLM의 환각(Hallucination) 완화</strong></li>
             <li>Neo4j + HGAT 모델을 기반으로 <strong>하이브리드 추천 구조 구현</strong></li>
+            <li>Vector DB 기반 (FAISS) 검색 최적화로 <strong>응답 시간 단축</strong></li>
             <li>AWS 환경에서 FastAPI로 <strong>실시간 추천 서비스 배포 및 운영 환경 구축</strong></li>
-            <li>ElasticSearch 기반 검색 최적화로 <strong>응답 시간 약 30% 단축</strong></li>
           </ul>
 
           <ul class="disc-list">
-            <li><strong>Tech Stack:</strong> Python · PyTorch Geometric · OpenAI · FAISS · LangChain · Neo4j · FastAPI · AWS · ElasticSearch</li>
+            <li><strong>Tech Stack:</strong> Python · PyTorch Geometric · OpenAI · FAISS · LangChain · Neo4j · FastAPI · AWS </li>
           </ul>
         </li>
 
