--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <div style="margin-top:10px;">
         <strong>Research Interests:</strong> GNN (Graph Neural Network) · LLM · Graph DB · 추천시스템 <br>
-        <strong>Main Skils:</strong> Python · PyTorch · Linux · AWS · Java · MySQL
+        <strong>Skills:</strong> Python · PyTorch · Linux · AWS · Java · MySQL
       </div>
     </section>
 
@@ -114,18 +114,17 @@
         <!-- Session-Based Recommendation -->
         <li class="project">
           <strong>Session-Based Recommendation system (SBRs) with GNN</strong>
-
+          논문 투고 후 코드 공개 예정
           <ul class="disc-list">
             <li>
-              (서울과학기술대학교 석사 연구 / 논문 투고 후 코드 공개 예정)<br>
               세션 데이터 내 아이템 간 관계를 그래프로 모델링하고, GNN을 활용하여 추천 정확도와 학습 효율을 개선한 연구.
             </li>
           </ul>
 
           <ul class="circle-list">
             <li>세션 내 아이템 간 관계를 그래프로 모델링하여 <strong>GNN 기반 세션 추천 알고리즘 연구</strong></li>
-            <li>데이터 필터링 및 증강 기법을 결합해 <strong>잡음(Noise) 제거 및 희소 세션 데이터 보완</strong></li>
-            <li>Tail 아이템 추천 성능 <strong>최대 10% 향상</strong> 및 학습 효율 <strong>최대 20% 단축</strong> 달성</li>
+            <li>데이터 필터링 및 증강 기법을 결합해 <strong>Noise 제거 및 희소 세션 데이터 보완</strong></li>
+            <li>Tail 아이템 추천 성능 <strong>최대 30% 향상</strong> 및 학습 효율 <strong>최대 20% 단축</strong> 달성</li>
           </ul>
 
           <ul class="disc-list">
