--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           </ul>
 
           <ul class="disc-list">
-            <li><strong>Tech Stack:</strong> Java (Spring Boot) · MySQL · Jenkins · BitBucket · Jira · RESTful API · Linux (CronTab) · JSON</li>
+            <li><strong>Tech Stack:</strong> Java (Spring Boot) · MySQL · JavaScript Jenkins · BitBucket · RESTful API · Linux · JSON</li>
           </ul>
         </li>
       </ul>
