--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </ul>
 
           <ul class="disc-list">
-            <li><strong>Tech Stack:</strong> Python · PyTorch Geometric · Docker · Linux</li>
+            <li><strong>Tech Stack:</strong> Python · Pytorch · PyTorch Geometric · Scikit-Learn </li>
           </ul>
         </li>
 
@@ -185,8 +185,8 @@
         <!-- 성동구 상권 분석 -->
         <li class="project">
           <strong>성동구 상권 분석 프로젝트</strong>
-          <a href="https://github.com/DDohyeon2941/sungsoo" target="_blank">[GitHub]</a>
-
+          <a href="https://github.com/DDohyeon2941/sungsoo" target="_blank">[GitHub]</a> <br>
+          🏆 본 프로젝트는 2024 성동구 빅데이터 펠로우십에서 우수상을 수상한 프로젝트입니다.
           <ul class="disc-list">
             <li>
               성동구 빅데이터 분석·활용 펠로우십에 참여하여  
@@ -226,7 +226,6 @@
             <li><strong>백엔드 개발:</strong> Spring Boot 기반 백오피스(통계·정산·거래내역 관리) 시스템 개발 및 유지보수</li>
             <li><strong>데이터 자동화:</strong> Stored Procedure와 CronTab을 이용한 <strong>대용량 통계 자동화 파이프라인 구축</strong></li>
             <li><strong>API 설계 및 최적화:</strong> RESTful API를 설계하여 실시간 거래 데이터 입출력 효율 개선</li>
-            <li><strong>DevOps 관리:</strong> Jenkins, BitBucket <strong>자동화된 테스트·릴리즈 파이프라인</strong> 구축</li>
             <li><strong>장애 대응:</strong> 실시간 송금 시스템의 장애 모니터링</li>
           </ul>
 
