--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
         <!-- 성동구 상권 분석 -->
         <li class="project">
           <strong>성동구 상권 분석 프로젝트</strong>
-          <a href="https://github.com/DDohyeon2941/sungsoo" target="_blank">[GitHub]</a> <br>
-          🏆 본 프로젝트는 2024 성동구 빅데이터 펠로우십에서 우수상을 수상한 프로젝트입니다.
+          <a href="https://github.com/DDohyeon2941/sungsoo" target="_blank">[GitHub]</a> [🏆 2024 성동구 빅데이터 펠로우십 우수상]
           <ul class="disc-list">
             <li>
               성동구 빅데이터 분석·활용 펠로우십에 참여하여  
