--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
       <div style="margin-top:10px;">
         <strong>Research Interests:</strong> GNN (Graph Neural Network) · LLM · Graph DB · 추천시스템 <br>
-        <strong>Skills:</strong> Python · PyTorch · Linux · AWS · Java · MySQL
+        <strong>Skills:</strong> Python · PyTorch · Linux · AWS · Java · MySQL · Docker
       </div>
     </section>
 
@@ -156,7 +156,7 @@
         <li class="project">
           <strong>GraphRAG Movie Chatbot</strong>
           <a href="https://github.com/SyngyeonTak/GNN-and-GraphRAG-based-Movie-Recommendation-Chatbot" target="_blank">[GitHub]</a>
-          <a href="#" target="_blank" style="margin-left:8px;">[Demo]</a>
+          <a href="http://3.24.87.84:8000/chat" target="_blank" style="margin-left:8px;">[Demo]</a>
 
           <ul class="disc-list">
             <li>
@@ -181,7 +181,7 @@
         <li class="project">
           <strong>LLM 기반 여행지 추천 챗봇 ("서울 + Alpha")</strong>
           <a href="https://github.com/seoulAlpha/seoulAlpha" target="_blank">[GitHub]</a>
-          <a href="#" target="_blank" style="margin-left:8px;">[Demo]</a>
+          <a href="https://huggingface.co/spaces/seoulalpha/seoulalpha_space" target="_blank" style="margin-left:8px;">[Demo]</a>
 
           <ul class="disc-list">
             <li>
