--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
     .award-badge {
       display: inline-block;
-      background: linear-gradient(90deg, #007BFF, #00AEEF);
-      color: white;
+      background: linear-gradient(90deg, #FFD700, #FFC107);
+      color: #333;
       font-weight: bold;
       padding: 4px 10px;
       border-radius: 12px;
