--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 
     .award-badge {
       display: inline-block;
-      background: linear-gradient(90deg, #FFD700, #FFC107);
-      color: #333;
-      font-weight: bold;
+      background: linear-gradient(90deg, #777, #999);
+      color: #fff;
+      font-weight: 600;
       padding: 4px 10px;
       border-radius: 12px;
       margin-left: 6px;
       font-size: 0.9rem;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.15);
+      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
       vertical-align: middle;
     }
     .award-badge::before {
