--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </ul>
 
           <ul class="disc-list">
-            <li><strong>Tech Stack:</strong> Java (Spring Boot) · MySQL · JavaScript Jenkins · BitBucket · RESTful API · Linux · JSON</li>
+            <li><strong>Tech Stack:</strong> Java (Spring Boot) · MySQL · JavaScript · Jenkins · BitBucket · RESTful API · Linux · JSON</li>
           </ul>
         </li>
       </ul>
