--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
   </main>
 
   <footer>
-    © 2025 Tak Seungyeon. All rights reserved.
+    © 2025 Tak Syngyeon All rights reserved.
   </footer>
 </body>
 </html>
