--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     <section>
       <h2>About Me</h2>
       <p>
+        백앤드 개발 경력과 AI 역량을 갖춘 풀스택 데이터 사이언티스트 입니다.<br>
         새로운 아이디어를 검증하고 실제 서비스로 연결하는 과정에서 큰 보람을 느끼는 개발자입니다.<br>
         연구에서 얻은 통찰을 바탕으로 <strong>“실제 문제를 효율적으로 해결하는 AI”</strong>를 만드는 것을 목표로 하고 있습니다.
       </p>
@@ -135,7 +136,6 @@
         <li class="project">
           <strong>Session-Based Recommendation system (SBRs) with GNN</strong>
           <span class="award-badge">2026 서울과학기술대하교 학위논문 <strong>장려상</strong></span>
-          논문 투고 후 코드 공개 예정
           <ul class="disc-list">
             <li>
               세션 데이터 내 아이템 간 관계를 그래프로 모델링하고, GNN을 활용하여 추천 정확도와 학습 효율을 개선한 연구.
@@ -170,7 +170,8 @@
             <li>RAG(Retrieval-Augmented Generation) 구조로 <strong>LLM의 환각(Hallucination) 완화</strong></li>
             <li>Neo4j + HGAT 모델을 기반으로 <strong>하이브리드 추천 구조 구현</strong></li>
             <li>Vector DB 기반 (FAISS) 검색 최적화로 <strong>응답 시간 단축</strong></li>
-            <li>AWS 환경에서 FastAPI로 <strong>실시간 추천 서비스 배포 및 운영 환경 구축</strong></li>
+            <li>Docker 기반 <strong>어플리케이션 패키징</strong> <a href="https://hub.docker.com/repository/docker/syngyeontak/movie-chatbot/general" target="_blank">[DockerHub]</a> </li>
+            <li>AWS,GCP 환경에서 FastAPI로 <strong>실시간 추천 서비스 배포 및 운영 환경 구축</strong></li>
           </ul>
 
           <ul class="disc-list">
