--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
       <div style="margin-top:10px;">
         <strong>Research Interests:</strong> GNN (Graph Neural Network) · LLM · Graph DB · 추천시스템 <br>
-        <strong>Skills:</strong> Python · PyTorch · Linux · AWS · Java · MySQL · Docker
+        <strong>Skills:</strong> Python · PyTorch · Linux · AWS · GCP · Java · MySQL · Docker
       </div>
     </section>
 
