--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
           </ul>
 
           <ul class="disc-list">
-            <li><strong>Tech Stack:</strong> Python · PyTorch Geometric · OpenAI · FAISS · LangChain · Neo4j · FastAPI · AWS </li>
+            <li><strong>Tech Stack:</strong> Python · PyTorch Geometric · OpenAI · FAISS · LangChain · Neo4j · FastAPI · AWS · GCP </li>
           </ul>
         </li>
 
