--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
   <header>
     <h1>탁승연</h1>
-    <p>데이터 사이언스 · 추천시스템 연구/개발자</p>
+    <p>Backend Developer/ Machine Learning Engineer / MLOps Engineer</p>
   </header>
 
   <main>
